--- a/kielet/styles.css
+++ b/kielet/styles.css
@@ -21,13 +21,17 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.5em;
+    gap: 3em;
+}
+
+#inputArea > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #arrow {
     font-size: 1em;
-    padding-left: 5%;
-    padding-right: 5%;
 }
 
 input[type=text] {
@@ -38,14 +42,11 @@ input[type=text] {
 }
 
 #pointsText {
-    margin-left: 5%;
+    text-align: center;
     border-style: bold;
     border-radius: 2px;
     background-color: whitesmoke;
     box-shadow: 1px 1px 1px 0px black;
-}
-
-#pointsText p {
     padding: 0.25em;
     margin: 0;
 }
@@ -60,6 +61,11 @@ input[type=text] {
     display: flex;
     flex-direction: row;
     gap: 5px;
+}
+
+#keyboardArea > p {
+    float: bottom;
+    margin: 0;
 }
 
 button {
@@ -159,3 +165,20 @@ button {
     padding-left: 40%;
 }
 
+/* Mobile layout */
+@media screen and (max-width: 75rem) {
+    #inputArea {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
+    }
+
+    label[for=answerInput] {
+        margin-top: 10%;
+    }
+
+    #keyboardArea * :not(.coreControl) {
+        display: none;
+    }
+}
