TA: Clean up the styling a bit for mobile

--- a/kielet/styles.css
+++ b/kielet/styles.css
@@ -182,7 +182,10 @@ button {
 @media screen and (max-width: 75rem) {
     #root {
         width: 100%;
-        padding: 0;
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 5%;
+        padding-bottom: 5%;
     }
 
     .inputArea {
@@ -203,6 +206,10 @@ button {
         margin-top: 10%;
     }
 
+    #keyboardArea {
+        gap: 0;
+    }
+
     #keyboardArea * :not(.coreControl) {
         display: none;
     }
@@ -214,16 +221,13 @@ button {
     /* Field icons. NOTE: Why are these so complicated? */
     .inputArea             div:has(> .english):before { content: '🇬🇧'; }
     .inputArea:first-child div:has(> .english):before { content: '🇬🇧'; }
-    .inputArea:first-child div:has(> .english.pointsField):before { content: '⭐'; }
+    .inputArea:first-child div:has(> .english.pointsField):before { content: ''; }
 
     .inputArea             div:has(> .russian):before { content: '🇷🇺'; }
     .inputArea:first-child div:has(> .russian):before { content: '🇷🇺'; }
-    .inputArea:first-child div:has(> .russian.pointsField):before { content: '⭐'; }
+    .inputArea:first-child div:has(> .russian.pointsField):before { content: ''; }
 
     .inputArea             div:has(> .finnish):before { content: '🇫🇮'; }
     .inputArea:first-child div:has(> .finnish):before { content: '🇫🇮'; }
-    .inputArea:first-child div:has(> .finnish.pointsField):before { content: '⭐'; }
-
-                           div:has(> .pointsField):before { content: '⭐'; }
-    .inputArea:first-child div:has(> .pointsField):before { content: '⭐'; }
+    .inputArea:first-child div:has(> .finnish.pointsField):before { content: ''; }
 }
